--- a/apps/dashboard/src/styles/variables.less
+++ b/apps/dashboard/src/styles/variables.less
@@ -1,5 +1,5 @@
 /** 公共前缀 */
-@starter-prefix: tdesign-starter;
+@starter-prefix: kreutzer;
 
 // 组件库本身只有色彩相关的css token 扩展其他css token使用 待组件库扩充其他token后再做替换 这里使用less vars 避免两种css token让使用者混淆
 // tdesign 只保持一套token即可
